complete cart view with tests.